@@ -1,3 +1,9 @@
+2011-05-06  Frank Warmerdam  <warmerdam@pobox.com>
+
+	* geo_normalize.c: Fix so that false easting/northing values read from
+	a files geokeys are correctly normalized into meters in the GTIFDefn
+	structure. http://trac.osgeo.org/gdal/ticket/3901
+
 2011-04-11  Frank Warmerdam  <warmerdam@pobox.com>
 
 	* geo_normalize.c: fix false easting/northing fetching from epsg for
